[project]
name = "pypwsafe"
version = "0.4"
description = "Python interface to Password Safe v3 files."
readme = "README.rst"

authors = [
    {name = "H. Turgut Uyar", email = "uyar@tekir.org"},
    {name = "Paulson McIntyre", email = "paul@gpmidi.net"},
]
license = {file = "LICENSE.txt"}

keywords = ["password", "login", "authentication", "passwordsafe", "security"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Operating System :: MacOS",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Security :: Cryptography",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]

requires-python = "~=3.8"
dependencies = ["pygcrypt"]

[project.optional-dependencies]
tests = ["pytest", "pytest-cov"]
style = ["ruff"]
dev = [
    "pypwsafe[tests,style]",
    "build",
    "twine",
    "tox",
]

[project.scripts]
pwsafecli = "pypwsafe:pwsafecli.main"

[project.urls]
repository = "https://github.com/uyar/pypwsafe"

[tool.setuptools]
packages = ["pypwsafe"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source_pkgs = ["pypwsafe"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.ruff]
exclude = ["tests/TestPWSafeCli.py"]
select = ["E", "F", "I"]
ignore = ["E501", "E731"]
line-length = 79

[tool.ruff.per-file-ignores]
"tests/*" = ["E501"]

[tool.ruff.isort]
lines-after-imports = 2
section-order = [
    "future",
    "test",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.ruff.isort.sections]
test = ["pytest", "unittest"]

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py3{8,9,10,11}, style
isolated_build = True

[testenv]
extras = tests
commands =
    pytest

[testenv:coverage]
extras = tests
commands =
    pytest --cov

[testenv:style]
skip_install = true
deps =
    ruff
commands =
    ruff pypwsafe tests

[testenv:flake8]
skip_install = true
deps =
    flake8
    flake8-isort
commands =
    flake8 pypwsafe tests

[testenv:package]
skip_install = true
deps =
    build
    twine
commands =
    python -c "import shutil; shutil.rmtree('dist', ignore_errors=True)"
    python -m build
    twine check dist/*
"""

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
